--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
         <activity android:name=".GameActivity" />
         <activity android:name=".GameOverActivity"></activity>
+        <activity android:name=".ClassicActivity"></activity>
+
     </application>
 
 </manifest>
