--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
+        android:supportsRtl="false"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -18,9 +18,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".GameActivity" />
-        <activity android:name=".GameOverActivity"></activity>
-        <activity android:name=".ClassicActivity"></activity>
-
+        <activity android:name=".GameOverActivity" />
+        <activity android:name=".ClassicActivity" />
+        <activity android:name=".BestGameActivityEver"></activity>
     </application>
 
 </manifest>
