--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="false"
-        android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,9 +20,12 @@
         </activity>
         <activity android:name=".GameActivity"
             />
-        <activity android:name=".GameOverActivity" />
-        <activity android:name=".ClassicActivity" />
-        <activity android:name=".BestGameActivityEver"></activity>
+        <activity android:name=".GameOverActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ClassicActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".BestGameActivityEver"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
